# stonks_bot

./: LICENSE  README.md  database_access.py  main.py  pyproject.toml
