[tool.poetry]
name = "repl_python3_stocksBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase = "^3.0.1"
yfinance = "^0.1.63"
discord = "^1.7.3"
python_jwt = "^2"
gcloud = "0.18.3"
sseclient="0.0.27"
pycrypto="2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
